product_docs/docs/edb-postgres-ai/1.2/hybrid-manager/using_hybrid_manager/migration/schema_migration/migration_portal/hm_schema_migration.mdx
---
title: Assessing schemas for HM projects
navTitle: Assessing schemas loaded by Agent
description: Learn about assessing schemas for database migrations with Hybrid Manager.
redirects:
- /edb-postgres-ai/hybrid-manager/using_hybrid_manager/migration/migration_portal/hm_schema_migration
---

Use the collaborative [project-scoped workspace](access_mp.mdx#project-scoped-workspace-vs-users-workspace) of the Migration Portal to convert and migrate schemas in the context of a database migration. The Hybrid Manager provides an integration that lets you use the HM Console to create a Migration Portal project where you can easily add source database schemas pre-loaded by the [Agent](/edb-postgres-ai/current/hybrid-manager/using_hybrid_manager/migration/migration_guides/oracle_to_hm_managed/) while you are performing a database migration.

Only Oracle databases include an integration of the Migration Portal into a migration workflow, as their schemas require compatibility assessment and oftentimes conversion before they are migrated to the destination database.

To upload and assess externally-provided DDL schema files, [use the user's workspace](external_schema_migration.mdx).

## Prerequisites

-   You [registered an Oracle database](/edb-postgres-ai/current/hybrid-manager/using_hybrid_manager/migration/migration_guides/oracle_to_hm_managed/) with the Hybrid Manager.

-   **Optional:** The administrator of Hybrid Manager has [enabled and configured the AI Copilot with the AI/LLM of your organization](../../../enabling_migration_copilot.mdx) to facilitate resolving schema incompatibilities in the Migration Portal.

## Accessing Migration Portal

Use the Migration Portal integration to assess and migrate schemas:

1.  In the **Estate** page, select the **Migrations** tab.

2.  Select the **Database Name** of the database you want to migrate to open the database's detailed view.

!!!Note

    Only available for Oracle databases. 

If you already created a schema migration project for one, several or all schemas, the Console displays a hyperlink with the name of the project in the **MP Project** column. This opens a Migration Portal workspace that contains all the schemas in that project.

If you haven't created a project for your schema migrations yet, select either the global **+ New MP Project** button or the schema-scoped **+** sign. This starts a new workflow to [create a Migration Portal](hm_schema_migration.mdx#creating-a-migration-portal-project) project. 

## Creating a Migration Portal project

You can create Migration Portal projects from the Hybrid Manager. 

1.  In the **Estate** page, select the **Migrations** tab.

2.  Select the **Database Name** of the database you want to migrate to open the database's detailed view.

3.  In the detailed view of the database, select the **Schemas** tab. 

4.  Select **+ New MP Project** or the the plus sign next to one of the schemas you want to migrate.

5.  In the pop-up window, enter the details for the Migration Portal project that will host the assessment, conversion and migration of the schemas and select **Continue**.

6.  Select all the schemas you want to add to this Migration Portal project. You can only select schemas that the Agent has ingested successfully and schemas that are not already part of a different MP project.

    **Note:** You can't add new schemas to the existing project later, but you can use a different project to migrate other schemas to the same destination database.

7.  Select **Create New Project**.

8.  In the background, this creates a Migration Portal project and loads the source schemas into it for analysis.

After the Hybrid Manager finishes loading the schemas and creating a project in the Migration Portal, a hyperlink is added with the name of the project. Select the hyperlink to open the Migration Portal.

## Working in the Migration Portal

The selected schemas have been uploaded and assessed by the Migration Portal. Use the AI Copilot or QuickHelp to help you resolve incompatibilities. 

1.  After you have resolved all compatibility issues, select **Migrate to …**.

2.  Select the **Online migration** option (recommended).

3.  Select the schemas you want to migrate, but disable **Constraints** from the list of objects underneath the database. Select **Next**.

    !!!note

        Review [Schema integrity and performance considerations](/edb-postgres-ai/current/hybrid-manager/using_hybrid_manager/migration/migration_guides/self_managed_pg_to_self_managed_pg/handling_schema/) to learn more about why constraints must be disabled and to review other considerations.

4.  In the **Connect to your cluster** page, enter the host name of the database cluster you want to use as a destination.

    !!!note

        If you are migrating to an HM-managed database cluster: You can find the Read/Write Host and other connection data at **Clusters** > select the cluster > **Connect**.

5.  Select **Next** and wait until the schemas have been imported successfully.

6.  Connect to the target database cluster and ensure the schemas have been migrated. You can now close the Migration Portal.

## Deleting a Migration Portal project

When using the project-scoped workspace of the Migration Portal, project deletion is only possible through the HM Console, and not through the integrated portal.

1.  From the **Estate** page, navigate to the **Migrations** tab.

2.  Select the **Database Name** corresponding to the database you were migrating. This action opens the database's detailed view.

3.  Select the **Schemas** tab. You will see a list of schemas and the assigned Migration Portal projects.

4.  Locate the schema assigned to the Migration Portal project you want to delete,  and select the **+** (plus) sign in the same line.

    !!!note

       If you are using a project to assess several schemas, deleting the project from any of the assigned schemas deletes the project for all schemas.

5.  In the expanded view, select the trash can icon under the **Actions** column.

6.  Type **delete project** and select **Confirm Delete** to permanently delete the project. 

## Switching to user's workspace

While you are working on schemas in the Migration Portal, you can switch to the [user's workspace](access_mp.mdx#project-scoped-workspace-vs-users-workspace) for manual DDL upload. 

For this, select **Switch to user's workspace**.

However, this workspace won't display the schemas you selected during project creation, and should only serve as a way to quickly switch between tasks. See [Managing external schemas for external DDL](external_schema_migration.mdx) for more information.

## Related topics

-   [Perform an online or offline migration](https://www.enterprisedb.com/docs/migration_portal/latest/04_mp_migrating_database/03_mp_schema_migration/) of the converted schemas to a destination database.

-   [Migration Portal documentation](https://www.enterprisedb.com/docs/migration_portal/latest/03_mp_using_portal/) for recommendations and guidelines on how to use the portal.
